--- a/cougmarketplace/src/app/globals.css
+++ b/cougmarketplace/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@import "flowbite";
+
 
 :root {
   --background: #ffffff;
@@ -26,4 +26,9 @@ body {
   background: none;
   color: none;
   font-family: Arial, Helvetica, sans-serif, 'Prism';
+}
+
+.descSize {
+  width: 250px;
+  height: 200px;
 }
